<resources>
    <string name="app_name">QuerySQL</string>
    <string name="btnInsert">GUARDAR</string>
    <string name="btnModificar">MODIFICAR</string>
    <string name="btnBorrar">BORRAR</string>
    <string name="btnConsultar">CONSULTAR</string>
    <string name="et_ID">ID</string>
    <string name="etName">Nombre</string>
    <string name="etPhone">Teléfono</string>
    <string name="etUserName">Apellido</string>
    <string name="etEmail">Email</string>
    <string name="tvNewContact">NUEVO CONTACTO</string>
    <string name="btnAceptar">ACEPTAR</string>
    <string name="tvModificar">INGRESE LOS DATOS A MODIFICAR</string>
    <string name="tvBorrar">¿QUÉ ID QUIERE BORRAR?</string>
    <string name="tvName_Surname">NOMBRE Y APELLIDO</string>
    <string name="tvPhone">TELÉFONO</string>
    <string name="tvMail">EMAIL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>