<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CL_Modif"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_op"
    android:padding="32dp"
    tools:context=".modificar_fragment">

    <TextView
        android:id="@+id/tvModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/tvModificar"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNameMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:ems="10"
        android:hint="@string/etName"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIDMod" />

    <EditText
        android:id="@+id/etIDMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:ems="10"
        android:hint="@string/et_ID"
        android:inputType="number"
        android:paddingStart="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvModificar" />

    <EditText
        android:id="@+id/etSurMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:ems="10"
        android:hint="@string/etUserName"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameMod" />

    <EditText
        android:id="@+id/etPhoneMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:ems="10"
        android:hint="@string/etPhone"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSurMod" />

    <EditText
        android:id="@+id/etEmailMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:ems="10"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneMod" />

    <Button
        android:id="@+id/btnModif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_ingreso_datos"
        android:text="@string/btnModificar"
        android:theme="@style/Theme.QuerySQL.MOD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailMod" />
</androidx.constraintlayout.widget.ConstraintLayout>