<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/cvID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="83dp"
                tools:text="ID" />

            <TextView
                android:id="@+id/tvNombre_Query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvName_Surname"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/cvID"
                tools:layout_editor_absoluteX="91dp" />

            <TextView
                android:id="@+id/tvPhone_Query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPhone"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvMail_Query"
                app:layout_constraintTop_toBottomOf="@+id/tvNombre_Query"
                tools:layout_editor_absoluteX="91dp" />

            <TextView
                android:id="@+id/tvMail_Query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvMail"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPhone_Query"
                tools:layout_editor_absoluteX="91dp" />

            <TextView
                android:id="@+id/cvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/tvNombre_Query"
                app:layout_constraintTop_toBottomOf="@+id/cvID" />

            <TextView
                android:id="@+id/cvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/cvEmail"
                app:layout_constraintStart_toEndOf="@+id/tvPhone_Query"
                app:layout_constraintTop_toBottomOf="@+id/tvNombre_Query" />

            <TextView
                android:id="@+id/cvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvMail_Query"
                app:layout_constraintTop_toBottomOf="@+id/cvPhone" />

            <TextView
                android:id="@+id/cvSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/cvName"
                app:layout_constraintTop_toBottomOf="@+id/cvID" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/smile" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>